--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
     <title>𝑷𝒖𝒑𝒑𝒂𝒍𝒂 𝑲𝒐𝒖𝒔𝒉𝒊𝒌</title>
 
     <!-- Search Engine tags -->
-    <meta content="Koushik Puppala is a student at IIIT Raichur, which is under IIT Hyderabad. He is pursuing b.tech from CSE Department" name="description">
-    <meta content="PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH" name="keywords">
-    <meta content="PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH" name="tag">
+    <meta
+        content="Koushik Puppala is a student at IIIT Raichur, which is under IIT Hyderabad. He is pursuing b.tech from CSE Department"
+        name="description">
+    <meta content="PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH"
+        name="keywords">
+    <meta content="PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH"
+        name="tag">
     <meta content="Puppala Koushik" name="author">
 
     <!-- Google Tag Manager -->
 
     <script>
-        (function(w, d, s, l, i) {
+        (function (w, d, s, l, i) {
             w[l] = w[l] || [];
             w[l].push({
                 'gtm.start': new Date().getTime(),
@@ -60,7 +64,9 @@
     <link href="assets/img/RedK.webp" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Satisfy" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Satisfy"
+        rel="stylesheet">
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -81,8 +87,11 @@
         <!-- ======= .nav-menu ======= -->
 
         <div class="container">
-            <a class="navbar-brand js-scroll" href="" style="color: red; font-style: italic;"><strong>Puppala Koushik</strong></a>
-            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation"></button>
+            <a class="navbar-brand js-scroll" href="" style="color: red; font-style: italic;"><strong>Puppala
+                    Koushik</strong></a>
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false"
+                aria-label="Toggle navigation"></button>
         </div>
         <nav class="nav-menu d-none d-lg-block">
             <ul>
@@ -99,7 +108,10 @@
     <section id="hero">
         <div class="hero-container">
             <h1><strong>Koushik Puppala</strong></h1>
-            <h3 style="text-align: center; font-style: italic; font-size: 50px; color: whitesmoke;" class="intro-subtitle">A <span class="text-slider-items" style="display: none;">Student,Learner,Coder,Web Developer,Web Designer</span><span class="text-slider"></span></h3>
+            <h3 style="text-align: center; font-style: italic; font-size: 50px; color: whitesmoke;"
+                class="intro-subtitle">A <span class="text-slider-items"
+                    style="display: none;">Student,Learner,Coder,Web Developer,Web Designer</span><span
+                    class="text-slider"></span></h3>
 
             <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
         </div>
@@ -115,21 +127,31 @@
                 <div class="section-title">
                     <span>About Me</span>
                     <h2>About Me</h2>
-                    <h3 style="text-align: center; font-style: italic;">I am Koushikpuppala student of Bachelor of Technology in Computer Science and Engineering at Indian Institute of Information Technology Raichur, which is under the Indian Institute of Technology Hyderabad.</h3>
-                    <h3 style="text-align: center; font-style: italic;">My Home town is Rajahmundry, Andhra Pradesh, and belongs to a middle-class family. I have learned so many things from my past and surrounding peoples, which motivates me to work hard to make a better future.</h3>
+                    <h3 style="text-align: center; font-style: italic;">I am Koushikpuppala student of Bachelor of
+                        Technology in Computer Science and Engineering at Indian Institute of Information Technology
+                        Raichur, which is under the Indian Institute of Technology Hyderabad.</h3>
+                    <h3 style="text-align: center; font-style: italic;">My Home town is Rajahmundry, Andhra Pradesh, and
+                        belongs to a middle-class family. I have learned so many things from my past and surrounding
+                        peoples, which motivates me to work hard to make a better future.</h3>
                 </div>
 
                 <div class="row">
-                    <div class="image col-lg-4 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
+                    <div
+                        class="image col-lg-4 d-flex align-items-stretch justify-content-center justify-content-lg-start">
+                    </div>
                     <div class="col-lg-8 d-flex flex-column align-items-stretch">
                         <div class="content pl-lg-4 d-flex flex-column justify-content-center">
                             <div class="row">
                                 <div class="col-lg-12">
                                     <ul>
-                                        <li><i class="icofont-rounded-right"></i> <strong>Name:</strong> Koushik Puppala</li>
-                                        <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Technology(First Year)</li>
-                                        <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> koushikpuppala203@gmail.com</li>
-                                        <li><i class="icofont-rounded-right"></i> <strong>College:</strong> Indian Institute of Information Technology, Raichur</li>
+                                        <li><i class="icofont-rounded-right"></i> <strong>Name:</strong> Koushik Puppala
+                                        </li>
+                                        <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of
+                                            Technology(First Year)</li>
+                                        <li><i class="icofont-rounded-right"></i> <strong>Email:</strong>
+                                            koushikpuppala203@gmail.com</li>
+                                        <li><i class="icofont-rounded-right"></i> <strong>College:</strong> Indian
+                                            Institute of Information Technology, Raichur</li>
                                     </ul>
                                 </div>
                             </div>
@@ -140,28 +162,32 @@
                             <div class="progress">
                                 <span class="skill">C <i class="val">100%</i></span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                                        aria-valuemax="100"></div>
                                 </div>
                             </div>
 
                             <div class="progress">
                                 <span class="skill">C++ <i class="val">85%</i></span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                                        aria-valuemax="100"></div>
                                 </div>
                             </div>
 
                             <div class="progress">
                                 <span class="skill">HTML <i class="val">70%</i></span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                                        aria-valuemax="100"></div>
                                 </div>
                             </div>
 
                             <div class="progress">
                                 <span class="skill">CSS <i class="val">60%</i></span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                                        aria-valuemax="100"></div>
                                 </div>
                             </div>
                         </div>
@@ -192,10 +218,14 @@
                                     <i class="bx bx-share-alt"></i>
                                     <h3>Social Profiles</h3>
                                     <div class="social-links">
-                                        <a href="https://twitter.com/puppala_koushik" class="twitter"><i class="icofont-twitter"></i></a>
-                                        <a href="https://www.facebook.com/puppalakoushik" class="facebook"><i class="icofont-facebook"></i></a>
-                                        <a href="https://www.instagram.com/koushikpuppala" class="instagram"><i class="icofont-instagram"></i></a>
-                                        <a href="https://www.linkedin.com/in/puppalakoushik" class="linkedin"><i class="icofont-linkedin"></i></a>
+                                        <a href="https://twitter.com/puppala_koushik" class="twitter"><i
+                                                class="icofont-twitter"></i></a>
+                                        <a href="https://www.facebook.com/puppalakoushik" class="facebook"><i
+                                                class="icofont-facebook"></i></a>
+                                        <a href="https://www.instagram.com/koushikpuppala" class="instagram"><i
+                                                class="icofont-instagram"></i></a>
+                                        <a href="https://www.linkedin.com/in/puppalakoushik" class="linkedin"><i
+                                                class="icofont-linkedin"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -215,20 +245,27 @@
                         <form action="https://formspree.io/f/mnqownvq" method="post" role="form" class="email-form">
                             <div class="row">
                                 <div class="col-md-6 form-group">
-                                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                                    <input type="text" name="name" class="form-control" id="name"
+                                        placeholder="Your Name" data-rule="minlen:4"
+                                        data-msg="Please enter at least 4 chars" />
                                     <div class="validate"></div>
                                 </div>
                                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                                    <input type="email" class="form-control" name="email" id="email"
+                                        placeholder="Your Email" data-rule="email"
+                                        data-msg="Please enter a valid email" />
                                     <div class="validate"></div>
                                 </div>
                             </div>
                             <div class="form-group mt-3">
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                                <input type="text" class="form-control" name="subject" id="subject"
+                                    placeholder="Subject" data-rule="minlen:4"
+                                    data-msg="Please enter at least 8 chars of subject" />
                                 <div class="validate"></div>
                             </div>
                             <div class="form-group mt-3">
-                                <textarea class="form-control" name="message" rows="6" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                                <textarea class="form-control" name="message" rows="6" data-rule="required"
+                                    data-msg="Please write something for us" placeholder="Message"></textarea>
                                 <div class="validate"></div>
                             </div>
                             <div class="mb-3">
@@ -257,8 +294,10 @@
                 <a href="https://www.github.com/puppala-koushik" class="Github"><i class="bx bxl-github"></i></a>
                 <a href="https://twitter.com/puppala_koushik" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="https://www.facebook.com/puppalakoushik" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="https://www.instagram.com/koushikpuppala" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/puppalakoushik" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.instagram.com/koushikpuppala" class="instagram"><i
+                        class="bx bxl-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/puppalakoushik" class="linkedin"><i
+                        class="bx bxl-linkedin"></i></a>
             </div>
             <div class="copyright">
                 &copy; Copyright <strong><span>Puppala Koushik</span></strong>. All Rights Reserved
@@ -274,15 +313,9 @@
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
     <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
     <script src="assets/vendor/counterup/counterup.min.js"></script>
     <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="assets/vendor/venobox/venobox.min.js"></script>
-    <script src="assets/vendor/counterup/jquery.counterup.min.js"></script>
     <script src="assets/vendor/typed.js/typed.min.js"></script>
 
     <!-- Template Main JS File -->
