--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <title>𝑷𝒖𝒑𝒑𝒂𝒍𝒂 𝑲𝒐𝒖𝒔𝒉𝒊𝒌</title>
 
     <!-- Search Engine tags -->
-    <meta
-        content="Koushik Puppala is a student at IIIT Raichur, which is under IIT Hyderabad. He is pursuing b.tech from CSE Department"
-        name="description">
-    <meta content="PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH"
-        name="keywords">
-    <meta content="PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH"
-        name="tag">
+    <meta content="Koushik Puppala is a student at IIIT Raichur, which is under IIT Hyderabad. He is pursuing b.tech from CSE Department" name="description">
+    <meta content="PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH" name="keywords">
+    <meta content="PuppalaKoushik,Koushik Puppala,IIIT Raichur,IIT Hyderabad,Hyderabad,Rajahmundry,IIITR,IITH" name="tag">
     <meta content="Puppala Koushik" name="author">
+    <meta property='og:title' content='𝑷𝒖𝒑𝒑𝒂𝒍𝒂 𝑲𝒐𝒖𝒔𝒉𝒊𝒌'>
+    <meta property='og:type' content='website'>
+    <meta property='og:description' content='Koushik Puppala is a student at IIIT Raichur, which is under IIT Hyderabad. He is pursuing b.tech from CSE Department'>
+    <meta property='og:image' content='https://cdn.discordapp.com/attachments/789696376257773618/815436702846943252/RedK.webp'>
+    <meta property='og:url' content='https://koushikpuppala.live'>
 
     <!-- Favicons -->
     <link href="assets/img/RedK.webp" rel="icon">
@@ -43,9 +44,7 @@
         <div class="container">
             <a class="navbar-brand js-scroll" href="" style="color: red; font-style: italic;"><strong>Puppala
                     Koushik</strong></a>
-            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false"
-                aria-label="Toggle navigation"></button>
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation"></button>
         </div>
         <nav class="nav-menu d-none d-lg-block">
             <ul>
@@ -62,10 +61,7 @@
     <section id="hero">
         <div class="hero-container">
             <h1><strong>Koushik Puppala</strong></h1>
-            <h3 style="text-align: center; font-style: italic; font-size: 50px; color: whitesmoke;"
-                class="intro-subtitle">A <span class="text-slider-items"
-                    style="display: none;">Student,Learner,Coder,Web Developer,Web Designer</span><span
-                    class="text-slider"></span></h3>
+            <h3 style="text-align: center; font-style: italic; font-size: 50px; color: whitesmoke;" class="intro-subtitle">A <span class="text-slider-items" style="display: none;">Student,Learner,Coder,Web Developer,Web Designer</span><span class="text-slider"></span></h3>
 
             <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
         </div>
@@ -82,19 +78,13 @@
                     <span>About Me</span>
                     <h2>About Me</h2>
                     <h3 style="text-align: center; font-style: italic;">Hello Friends, I am
-                        <strong>Koushik puppala</strong>
-                        student of Bachelor of Technology in Computer Science and Engineering at
-                        Indian Institute of Information Technology Raichur, which is control by the Indian Institute of
-                        Technology Hyderabad.
+                        <strong>Koushik puppala</strong> student of Bachelor of Technology in Computer Science and Engineering at Indian Institute of Information Technology Raichur, which is control by the Indian Institute of Technology Hyderabad.
                     </h3>
-                    <h3 style="text-align: center; font-style: italic;">My Home town is Rajahmundry, Andhra Pradesh, and
-                        I belong to a middle-class family. I have learned so many things from
-                        my past and surrounding people, which motivates me to work hard to make a better future.</h3>
+                    <h3 style="text-align: center; font-style: italic;">My Home town is Rajahmundry, Andhra Pradesh, and I belong to a middle-class family. I have learned so many things from my past and surrounding people, which motivates me to work hard to make a better future.</h3>
                 </div>
 
                 <div class="row">
-                    <div
-                        class="image col-lg-4 d-flex align-items-stretch justify-content-center justify-content-lg-start">
+                    <div class="image col-lg-4 d-flex align-items-stretch justify-content-center justify-content-lg-start">
                     </div>
                     <div class="col-lg-8 d-flex flex-column align-items-stretch">
                         <div class="content pl-lg-4 d-flex flex-column justify-content-center">
@@ -103,12 +93,10 @@
                                     <ul>
                                         <li><i class="icofont-rounded-right"></i> <strong>Name:</strong> Koushik Puppala
                                         </li>
-                                        <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of
-                                            Technology(First Year)</li>
-                                        <li><i class="icofont-rounded-right"></i> <strong>Email:</strong>
-                                            contact@koushikpuppala.live</li>
-                                        <li><i class="icofont-rounded-right"></i> <strong>College:</strong> Indian
-                                            Institute of Information Technology, Raichur</li>
+                                        <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Technology(First Year)</li>
+                                        <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> contact@koushikpuppala.live
+                                        </li>
+                                        <li><i class="icofont-rounded-right"></i> <strong>College:</strong> Indian Institute of Information Technology, Raichur</li>
                                     </ul>
                                 </div>
                             </div>
@@ -119,32 +107,28 @@
                             <div class="progress">
                                 <span class="skill">C <i class="val">100%</i></span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-                                        aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
 
                             <div class="progress">
                                 <span class="skill">C++ <i class="val">85%</i></span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0"
-                                        aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
 
                             <div class="progress">
                                 <span class="skill">HTML <i class="val">70%</i></span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                                        aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
 
                             <div class="progress">
                                 <span class="skill">CSS <i class="val">60%</i></span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                                        aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                         </div>
@@ -201,27 +185,20 @@
                         <form action="https://formspree.io/f/mnqownvq" method="post" role="form" class="email-form">
                             <div class="row">
                                 <div class="col-md-6 form-group">
-                                    <input type="text" name="name" class="form-control" id="name"
-                                        placeholder="Your Name" data-rule="minlen:4"
-                                        data-msg="Please enter at least 4 chars" />
+                                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                                     <div class="validate"></div>
                                 </div>
                                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                                    <input type="email" class="form-control" name="email" id="email"
-                                        placeholder="Your Email" data-rule="email"
-                                        data-msg="Please enter a valid email" />
+                                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
                                     <div class="validate"></div>
                                 </div>
                             </div>
                             <div class="form-group mt-3">
-                                <input type="text" class="form-control" name="subject" id="subject"
-                                    placeholder="Subject" data-rule="minlen:4"
-                                    data-msg="Please enter at least 8 chars of subject" />
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
                                 <div class="validate"></div>
                             </div>
                             <div class="form-group mt-3">
-                                <textarea class="form-control" name="message" rows="6" data-rule="required"
-                                    data-msg="Please write something for us" placeholder="Message"></textarea>
+                                <textarea class="form-control" name="message" rows="6" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                                 <div class="validate"></div>
                             </div>
                             <div class="mb-3">
